fixed navbar spacing in search.html

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,6 @@ body {
 }
 
 .homepageHeader {
-    width: 90%;
     margin-left: 40px; /* Add a left margin */
     margin-right: 40px; /* Add a left margin */
     width: 60rem;
